Making some major css changes

--- a/views/master.html
+++ b/views/master.html
@@ -2,17 +2,20 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title name="title" active>portfolio testing</title>
+		<title name="title" active>Master document</title>
 		<link rel="stylesheet" type="text/css" href="/client/style.css">
 		<script src="/alloy/alloy.js"></script>
+		
+		<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,300,100' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<nav id="nav">
-			<a href="/" alt="Home">Home</a>
-			<a href="contact" alt="Contact">Contact</a>
+			<a href="/" alt="Home" class="" name="homebutton" active>Home</a>
+			<a href="projects" alt="Projects" class="" name="projectsbutton" active>Projects</a>
+			<a href="contact" alt="Contact" class="" name="contactbutton" active>Contact</a>
 		</nav>
-		<div name="body" active>
-
+		<div id="content" name="content" active>
+		
 		</div>
 	</body>
 </html>
