--- a/client/style.css
+++ b/client/style.css
@@ -1,56 +1,28 @@
+/*
+	Blå: #3498db;
+
+*/
+
 *
 {
-	/*margin: 0px;*/
-}/*
-#nav
-{
-	padding: 0px;
-	margin: 0px;
-	display: block;
-	font-size: 0;
+	margin: 0;
 }
-
-#nav a
-{
-	position: relative;
-	display: inline-block;
-	text-decoration: none;
-	line-height: 35px;
-	background-color: tomato;
-	color: white;
-	transition: background-color 0.3s;
-	margin: 0px;
-	font-size: initial;
-}
-#nav a:before
-{
-	content: attr(alt);
-	position: absolute;
-	display: block;
-	width: 100%;
-	height: 100%;
-	left: 0;
-	top: 0;
-	background-color: crimson;
-	transition: all 2s;
-	transform: scale(1,0) translate(0,50%);
-	overflow: hidden;
-	line-height: 35px;
-}
-#nav a:hover:before
-{
-	transform: scale(1,1) translate(0,0);
-}*/
 
 a
 {
     color: inherit;
     text-decoration: none;
 }
-
+body
+{
+	background-color: #3498db;
+	color: white;
+	font-family: 'Roboto', sans-serif;
+	font-weight: 400;
+}
 #nav
 {
-	position: absolute;
+	position: relative;
 	z-index: 3;
 	top: 10px;
 	width: 100%;
@@ -74,7 +46,6 @@ a
 	width: 160px;
 	height: 100%;
 	perspective: 800px;
-	font-weight: bold;
 	font-size: 1.5em;
 	vertical-align: middle;
 	text-align: center;
@@ -82,6 +53,10 @@ a
 	z-index: 0;
 	border: 0;
 	outline: 0;
+}
+.current
+{
+	color: #3498db;
 }
 #nav a:before
 {
@@ -124,7 +99,14 @@ a
 	opacity: 1;
 }
 
-#body
+#content
 {
-
+	position: relative;
+	top: 30px;
+	width: 800px;
+	margin: auto;
+}
+#content a
+{
+	color: rgba(0,0,0,0.4);
 }
