Style changes as well as some content added

--- a/views/contact.html
+++ b/views/contact.html
@@ -1,1 +1,1 @@
-Reach me via my <a href="http://github.com/Zalodu">GitHub</a>
+Reach me via my <a href="http://github.com/Zalodu">GitHub</a>, my <a href="">email</a>, or through <a href="">this form</a>.
