--- a/views/home.html
+++ b/views/home.html
@@ -1,1 +1,16 @@
-Hej detta är mitt hem
+Hello and welcome!
+<br>
+My name is Peter "Zalodu" Kjellén and I'm a developer with a wide range of skills. I am both born and raised in Stockholm, Sweden and currently I am studying engineering in Nacka.
+<br>
+<br>
+I create websites, applications and games, both professionally and as a hobby. Some of my skills follow:
+<ul>
+	<li>HTML 5</li>
+	<li>CSS 3</li>
+	<li>JavaScript</li>
+	<li>JQuery</li>
+	<li>PHP</li>
+	<li>MySQL</li>
+	<li>Node.js</li>
+	<li>Java</li>
+</ul>
