--- a/client/style.css
+++ b/client/style.css
@@ -1,5 +1,8 @@
 /*
 	Blå: #3498db;
+	Turkos: #0bff8f;
+	Orange?: #FF9600;
+	Röd?: #DB3534;
 
 */
 
@@ -18,7 +21,7 @@ body
 	background-color: #3498db;
 	color: white;
 	font-family: 'Roboto', sans-serif;
-	font-weight: 400;
+	font-weight: 300;
 }
 #nav
 {
@@ -53,6 +56,7 @@ body
 	z-index: 0;
 	border: 0;
 	outline: 0;
+	transition: color 0.5s;
 }
 .current
 {
@@ -108,5 +112,8 @@ body
 }
 #content a
 {
-	color: rgba(0,0,0,0.4);
+	font-weight: 400;
+	color:#0bff8f;
+	/*color: #4B4F75;*/
+	/*color: rgba(0,0,0,0.4);*/
 }
