--- a/views/master.html
+++ b/views/master.html
@@ -9,6 +9,8 @@
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,300,100' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
+		<!--img id="zalodu" src="img/Zalodu.png"-->
+		<h1 id="zalodu">Zalodu</h1>
 		<nav id="nav">
 			<a href="/" alt="Home" class="" name="homebutton" active>Home</a>
 			<a href="projects" alt="Projects" class="" name="projectsbutton" active>Projects</a>
