--- a/client/style.css
+++ b/client/style.css
@@ -9,6 +9,7 @@
 *
 {
 	margin: 0;
+	padding: 0;
 }
 
 a
@@ -22,6 +23,20 @@ body
 	color: white;
 	font-family: 'Roboto', sans-serif;
 	font-weight: 300;
+}
+/*
+#zalodu
+{
+	display: block;
+	position: relative;
+	width: 250px;
+	margin: auto;
+}
+*/
+#zalodu
+{
+	text-align: center;
+	font-weight: 100;
 }
 #nav
 {
@@ -116,4 +131,8 @@ body
 	color:#0bff8f;
 	/*color: #4B4F75;*/
 	/*color: rgba(0,0,0,0.4);*/
+}
+#content ul 
+{
+	padding-left: 20px;
 }
