--- a/client/style.css
+++ b/client/style.css
@@ -3,7 +3,7 @@
 	Turkos: #0bff8f;
 	Orange?: #FF9600;
 	Röd?: #DB3534;
-
+	Grå: #8D9090;
 */
 
 *
@@ -20,9 +20,16 @@ a
 body
 {
 	background-color: #3498db;
-	color: white;
+	color:white;
+	/*color: #8D9090;*/
 	font-family: 'Roboto', sans-serif;
 	font-weight: 300;
+}
+.card
+{
+	background-color: white;
+	box-shadow: 0 5px 15px 0 rgba(0,0,0,0.1);
+	border-bottom: 1px solid rgba(0,0,0,0.1);
 }
 /*
 #zalodu
@@ -42,7 +49,6 @@ body
 {
 	position: relative;
 	z-index: 3;
-	top: 10px;
 	width: 100%;
 	min-height: 50px;
 	display: -webkit-flex;
@@ -113,17 +119,24 @@ body
 	height: 170px;
 	transition: all 0.2s;
 }
-#nab a:hover:after
+/*
+#nav a:hover:after
 {
 	opacity: 1;
 }
-
+*/
 #content
 {
 	position: relative;
 	top: 30px;
 	width: 800px;
 	margin: auto;
+	/*
+	background-color: #F5F5F5;
+	box-shadow: 0 5px 15px 0 rgba(0,0,0,0.1);
+	*/
+	height: 100%;
+	padding: 10px;
 }
 #content a
 {
@@ -136,3 +149,4 @@ body
 {
 	padding-left: 20px;
 }
+
