require_once instead of require on alloy/view.php fixed an error

--- a/views/projects.html
+++ b/views/projects.html
@@ -134,7 +134,8 @@
 		z-index: 0;
 		/*width: 100%;*/
 	}
-	/* gradient on images
+	/* 
+    //gradient on images
 	.project:after
 	{
 		color: white;
@@ -159,6 +160,7 @@
 		background: white;
 		box-shadow: 0 5px 15px 0 rgba(0,0,0,0.1);
 		border-bottom: 1px solid rgba(0,0,0,0.1);
+        border-top: 5px solid #0bff8f;
 		position: absolute;
 		bottom: 0;
 		text-align: right;
