small changes to Projects page

--- a/views/master.html
+++ b/views/master.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+
+<!--                                                                
+                                                                   
+    http://picascii.com/ på Zalodu bilden, fixa en tydligare i photoshop #TODO
+
+-->
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
