--- a/views/projects.html
+++ b/views/projects.html
@@ -4,7 +4,7 @@
 		<div class="category" name="Test2" active>Test2</div>
 	</div>
 	<div id="projects" name="projects" active>
-		<!--div class="project card" name="Test1" active>
+		<div class="project card" name="Test1" active>
 			<img src="http://maban.co.uk/image/screenshot-party-tory-01.jpg">
 			<div class="projectname card" active>Project name 1</div>
 		</div>
@@ -12,25 +12,25 @@
 			<img src="http://media.al.com/live/photo/gulf-shores-website-screenshot-1c58200629ad5efb.jpg">
 			<div class="projectname card">Project name 2</div>
 		</div>
-		<div class="project card" name="Test1" active>
+		<div class="project card" name="Test3" active>
 			<div class="projectname card">Project name 3</div>
 		</div>
-		<div class="project card" name="Test2" active>
+		<div class="project card" name="Test4" active>
 			<div class="projectname card">Project name 4</div>
 		</div>
-		<div class="project card" name="Test1" active>
+		<div class="project card" name="Test5" active>
 			<div class="projectname card">Project name 5</div>
 		</div>
-		<div class="project card" name="Test2" active>
+		<div class="project card" name="Test6" active>
 			<div class="projectname card">Project name 6</div>
-		</div-->
+        </div>
 	</div>
 </div>
 <style>
 	#projectscontent
 	{
-		background-color: #F5F5F5;
-		box-shadow: 0 5px 15px 0 rgba(0,0,0,0.1);
+		/* background-color: #F5F5F5;
+		box-shadow: 0 5px 15px 0 rgba(0,0,0,0.1); */
 		color: #8D9090;
 	}
 	#categories
@@ -160,7 +160,7 @@
 		background: white;
 		box-shadow: 0 5px 15px 0 rgba(0,0,0,0.1);
 		border-bottom: 1px solid rgba(0,0,0,0.1);
-        border-top: 5px solid #0bff8f;
+        border-top: 5px solid #3498db;
 		position: absolute;
 		bottom: 0;
 		text-align: right;
