added images to all example projects

--- a/views/projects.html
+++ b/views/projects.html
@@ -13,15 +13,19 @@
 			<div class="projectname card">Project name 2</div>
 		</div>
 		<div class="project card" name="Test3" active>
+			<img src="http://netdna.webdesignerdepot.com/uploads/2012/11/Denise-Chandler-Web-Design-20121128.jpg">
 			<div class="projectname card">Project name 3</div>
 		</div>
 		<div class="project card" name="Test4" active>
+			<img src="http://cyberpclaptop.com/wp-content/gallery/web2/BOBECapps_0.jpg">
 			<div class="projectname card">Project name 4</div>
 		</div>
 		<div class="project card" name="Test5" active>
+			<img src="http://aromawebdesign.com/medical-web-design/fitness-web-design.jpg">
 			<div class="projectname card">Project name 5</div>
 		</div>
 		<div class="project card" name="Test6" active>
+			<img src="http://netdna.webdesignerdepot.com/uploads/2013/01/Web-Design-Bath-Moresoda-20130125.jpg">
 			<div class="projectname card">Project name 6</div>
         </div>
 	</div>
@@ -127,6 +131,7 @@
 		height: 180px;
 		margin: 1.25%;
 		overflow: hidden;
+        #border: 2px solid white;
 	}
 	.project img
 	{
